--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   },
   "devDependencies": {
     "typescript": "^4.0.5"
+  },
+  "scripts": {
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
   }
 }
